--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "jquery": "^3.4.1",
     "react": "^16.8.6",
     "react-ace-editor": "0.0.3",
     "react-dom": "^16.8.6",
