--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "jquery": "^3.4.1",
     "react": "^16.8.6",
+    "react-ace": "^7.0.2",
     "react-ace-editor": "0.0.3",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
